--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ main {
   margin-top: 50px;
 }
 
-.quadrato:not(:first-child):not(:nth-child(5)){
+.quadrato:not(:first-child):not(:nth-child(5)) {
   border-left: 1px solid white;
 }
 
@@ -311,4 +311,70 @@ main {
 }
 .quadrato img {
   height: 40px;
+}
+
+.sezione_bianca {
+  width: 100%;
+  background-color: white;
+  padding: 50px 0;
+}
+.bianca_prima_riga {
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+.bianca1 , .bianca2{
+  float: left;
+}
+
+.bianca1 h2{
+  font-size: 300%;
+  margin-bottom: 40px;
+}
+.b1_left {
+  width: 20%;
+}
+
+.b1_right {
+  width: 80%;
+  text-align: right;
+}
+
+.b1_right img {
+  width: 100px;
+  margin: 20px;
+  vertical-align: middle;
+}
+
+.b2_left {
+  width: 40%;
+  padding-top: 40px;
+}
+
+.b2_right {
+  width: 60%;
+  text-align: right;
+}
+
+.b2_right img {
+  width: 300px;
+}
+
+.bianca2 h2 {
+  font-size: 200%;
+  margin-bottom: 40px;
+}
+
+.bianca2 p:nth-child(2) {
+  margin-bottom: 60px;
+}
+
+.bianca2 p:nth-child(4) {
+  margin-top: 60px;
+  font-size: 80%;
+}
+
+footer {
+  width: 100%;
+  background-color: #394a60;
 }
