--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   color: #34465d;
-  word-spacing: 3px;
+  word-spacing: 1px;
 }
 
 .clearfix::after {
@@ -377,4 +377,87 @@ main {
 footer {
   width: 100%;
   background-color: #394a60;
+  padding: 30px 0;
+}
+
+footer * {
+  color: #cbd6e2;
+}
+
+.col4 {
+  float: left;
+  width: 25%;
+}
+
+.col4 h4 , .logo_grey p {
+  color: white;
+}
+
+.col4 li {
+  padding-top: 30px;
+  line-height: 5px;
+}
+
+.col4 .button {
+  background-color: #cbd6e2;
+  color: #394a60;
+  border: 1px solid #cbd6e2;
+}
+
+.social {
+  display: inline-block;
+  margin-top: 10px;
+}
+
+.social:not(:nth-child(7)) {
+  margin-left: 20px;
+}
+.facebook::before {
+  font-family: 'Font Awesome 5 Brands';
+  content: '\f39e';
+}
+
+.instagram::before {
+  font-family: 'Font Awesome 5 Brands';
+  content: '\f16d';
+}
+
+.youtube::before {
+  font-family: 'Font Awesome 5 Brands';
+  content: '\f167';
+}
+
+.twitter::before {
+  font-family: 'Font Awesome 5 Brands';
+  content: '\f099';
+}
+
+.linkedin::before {
+  font-family: 'Font Awesome 5 Brands';
+  content: '\f0e1';
+}
+
+.lingue {
+  margin-top: 70px;
+  text-align: center;
+  border-bottom: 1px solid #cbd6e2;
+}
+
+.lingue li {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+.ultimo_footer div {
+  width: 50%;
+  float: left;
+  padding-top: 30px;
+}
+.ultimo_footer li {
+  display: inline;
+  padding-left: 20px;
+}
+.ultimo_footer div:last-child {
+
+  text-align: right;
 }
